--- a/main.css
+++ b/main.css
@@ -15,6 +15,12 @@
     font-family: 'Anton', sans-serif;
 }
 
+.plan__list {
+    width: 90%;
+    margin: auto;
+    text-align: center;
+}
+
 .plan {
     background: #d5ffdc;
     text-align: center;
