--- a/shared.css
+++ b/shared.css
@@ -101,9 +101,12 @@ body {
 .main-footer__link {
     display: inline-block;
     margin: 0 16px;
-
 }
 
+.main-footer__link a {
+    text-decoration: none;
+    color: white;
+}
 
 .button {
     background-color: #0e4f1f;
