--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     background-image: url("freedom.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 5%;
+    background-position: left 10% bottom 60%;
     width: 100%;
     height: 528px;
     padding: 10px;
