--- a/packages/packages.css
+++ b/packages/packages.css
@@ -4,6 +4,7 @@ main {
 
 .background {
     background: url("../images/plans-background.jpg") no-repeat;
+    filter: grayscale(30%);
     width: 100%;
     height: 100%;
     position: fixed;
