--- a/shared.css
+++ b/shared.css
@@ -28,6 +28,12 @@ body {
     font-weight: bold;
     font-size: 22px;
     vertical-align: middle;
+    height: 22px;
+    display: inline-block;
+}
+
+.main-header__brand > img {
+    height: 100%;
 }
 
 .main-nav {
