--- a/main.css
+++ b/main.css
@@ -1,15 +1,18 @@
 #product-overview {
+    background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
+    url("images/freedom.jpg") left 10% bottom 70%/cover no-repeat border-box,
+    #ff1b68;
     /*background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 60%;*/
     /*background-repeat: no-repeat;*/
-    width: 100%;
-    height: 528px;
-    padding: 10px;
+    width: 100vw;
+    height: 50vh;
+    padding: 0.625rem;
+    margin-top: 2.75rem;
     position: relative;
     /*background-origin: border-box;
     background-clip: border-box;*/
-    background: url("images/freedom.jpg") left 10% bottom 60%/cover no-repeat border-box padding-box;
     /*border: 5px dashed red;*/
     /*background-image: linear-gradient(to left bottom, red, blue, green, yellow);*/
 }
@@ -23,8 +26,9 @@
     color: white;
     font-family: 'Anton', sans-serif;
     position: absolute;
-    bottom: 5%;
+    bottom: 0;
     left: 3%;
+    width: 97%;
 }
 
 .plan__list {
@@ -36,8 +40,8 @@
 .plan {
     background: #d5ffdc;
     text-align: center;
-    padding: 16px;
-    margin: 8px;
+    padding: 1rem;
+    margin: 0.5rem;
     display: inline-block;
     width: 30%;
     vertical-align: middle;
@@ -52,7 +56,7 @@
 .plan__annotation {
     background: white;
     color: #19b84c;
-    padding: 8px;
+    padding: 0.5rem;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
     border-radius: 8px;
 }
@@ -75,23 +79,23 @@
 
 .plan__features {
     list-style: none;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 .plan__features li {
-    margin: 8px 0;
+    margin: 0.5rem 0;
 }
 
 #key-features {
     background-color: #ff1b68;
-    margin-top: 80px;
-    padding: 16px;
+    margin-top: 5rem;
+    padding: 1rem;
 }
 
 #key-features .section-title {
     color: white;
-    margin: 32px;
+    margin: 2rem;
 }
 
 .key-features__list {
@@ -114,14 +118,14 @@
     border: 2px solid #424242;
     border-radius: 50%;
     margin: 0 auto;
-    padding: 25px;
+    padding: 1.56rem;
 }
 
 .key-feature__description {
     text-align: center;
     font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 /*
