--- a/shared.css
+++ b/shared.css
@@ -35,6 +35,30 @@ body {
     display: inline-block;
 }
 
+.toggle-button {
+    width: 3rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding-top: 0;
+    padding-bottom: 0;
+    vertical-align: middle;
+    height: 1.7rem;
+}
+
+.toggle-button:focus {
+    outline: none;
+}
+
+.toggle-button__bar {
+    width: 100%;
+    height: 0.2rem;
+    background: black;
+    display: block;
+    margin: 0.3rem 0;
+}
+
+
 .main-header__brand {
     color: #0e4f1f;
     text-decoration: none;
@@ -52,7 +76,7 @@ body {
 .main-nav {
     display: inline-block;
     text-align: right;
-    width: calc(100% - 74px);
+    width: calc(100% - 122px);
     vertical-align: middle;
 }
 
@@ -67,7 +91,8 @@ body {
     margin: 0 1rem;
 }
 
-.main-nav__item a {
+.main-nav__item a,
+.mobile-nav__item a{
     text-decoration: none;
     color: #0e4f1f;
     font-weight: bold;
@@ -88,7 +113,8 @@ body {
     border-bottom: 5px solid white;
 }
 
-.main-nav__item--cta a {
+.main-nav__item--cta a,
+.mobile-nav__item--cta a{
     color: white;
     background: #ff1b68;
     padding: 0.5rem 1rem;
@@ -102,7 +128,9 @@ body {
 }
 
 .main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
+.main-nav__item--cta a:active,
+.mobile-nav__item--cta a:hover,
+.mobile-nav__item--cta a:active{
     color: #ff1b68;
     background: white;
     border: none;
@@ -131,6 +159,34 @@ body {
     color: white;
 }
 
+.mobile-nav {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    background: white;
+    width: 80%;
+    height: 100vh;
+}
+
+.mobile-nav__items {
+    width: 90%;
+    height: 100%;
+    list-style: none;
+    margin: 10% auto;
+    padding: 0;
+    text-align: center;
+}
+
+.mobile-nav__item {
+    margin: 1rem 0;
+}
+
+.mobile-nav__item a {
+    font-size: 1.5rem;
+}
+
 .button {
     background-color: #0e4f1f;
     color: white;
@@ -151,4 +207,8 @@ body {
 
 .button:focus {
     outline: none;
+}
+
+.open {
+    display: block !important;
 }
