--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #product-overview {
     background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("images/freedom.jpg") left 10% bottom 70%/cover no-repeat border-box,
+    url("images/freedom.jpg") center/cover no-repeat border-box,
     #ff1b68;
     /*background-image: url("freedom.jpg");
     background-size: cover;
@@ -29,28 +29,33 @@
     bottom: 0;
     left: 3%;
     width: 97%;
+    font-size: 1.6rem;
 }
 
-.plan__list {
-    width: 90%;
-    margin: auto;
-    text-align: center;
+@media (min-width: 40rem) and (min-height: 60rem){
+    #product-overview {
+        height: 40vh;
+        background-position: 50% 25%;
+    }
+
+    #product-overview h1{
+        font-size: 2rem;
+    }
 }
 
 .plan {
     background: #d5ffdc;
     text-align: center;
     padding: 1rem;
-    margin: 0.5rem;
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
+    margin: 0.5rem 0;
+    display: block;
+    width: 100%;
 }
 
 .plan--highlighted {
     background: #19b84c;
     color: white;
-    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+    /*box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.5);*/
 }
 
 .plan__annotation {
@@ -87,6 +92,25 @@
     margin: 0.5rem 0;
 }
 
+@media (min-width: 40rem) and (orientation: landscape){
+
+    .plan__list {
+        width: 100%;
+        text-align: center;
+    }
+    .plan {
+        display: inline-block;
+        width: 30%;
+        vertical-align: middle;
+        min-width: 13rem;
+        max-width: 25rem;
+    }
+
+    .plan--highlighted {
+        box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+    }
+}
+
 #key-features {
     background-color: #ff1b68;
     margin-top: 5rem;
@@ -106,8 +130,8 @@
 }
 
 .key-feature {
-    display: inline-block;
-    width: 30%;
+    /*display: inline-block;*/
+    /*width: 30%;*/
     vertical-align: top;
 }
 
@@ -126,6 +150,15 @@
     font-weight: bold;
     color: white;
     font-size: 1.25rem;
+}
+
+@media (min-width: 40rem) {
+    .key-feature {
+        display: inline-block;
+        width: 30%;
+        vertical-align: top;
+        max-width: 25rem;
+    }
 }
 
 /*
