Done with section 11

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,5 +1,5 @@
 main {
-    padding-top: 2rem;
+    padding-top: 3rem;
 }
 
 .background {
@@ -86,3 +86,24 @@ main {
     color: #bbb;
 }
 
+@media (min-width: 40rem) {
+    main {
+        max-width: 1500px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 1500px) {
+    .package {
+        border-left: 4px solid #0e4f1f;
+    }
+
+    #free {
+        border-right: 4px solid #0e4f1f;
+    }
+
+    #free:hover,
+    #free:active{
+        border-right-color: #ff5454;
+    }
+}
