--- a/shared.css
+++ b/shared.css
@@ -9,6 +9,11 @@ body {
     padding: 0;
 }
 
+main {
+    min-height: calc(100vh - 2.7rem - 8rem);
+    margin-top: 2.7rem;
+}
+
 .backdrop {
     position: fixed;
     display: none;
@@ -62,9 +67,8 @@ body {
     color: #0e4f1f;
     text-decoration: none;
     font-weight: bold;
-    font-size: 1.5rem;
     vertical-align: middle;
-    height: 1.5rem;
+    height: 2.5rem;
     display: inline-block;
 }
 
@@ -206,6 +210,13 @@ body {
 
 .button:focus {
     outline: none;
+}
+
+.button[disabled] {
+    cursor: not-allowed;
+    border: #a1a1a1;
+    background: #ccc;
+    color: #a1a1a1;
 }
 
 .open {
