--- a/shared.css
+++ b/shared.css
@@ -34,13 +34,12 @@ main {
     left: 0;
     background: #2ddf5c;
     padding: 0.5rem 1rem;
-    z-index: 1;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.main-header > div {
-    display: inline-block;
-    vertical-align: middle;
-}
 
 .toggle-button {
     width: 3rem;
@@ -70,12 +69,11 @@ main {
     font-weight: bold;
     height: 2.5rem;
     /* width: 20px; */
-    display: inline-block;
-    vertical-align: middle;
 }
 
 .main-header__brand img {
-    height: 100%;
+    height: 2.5rem;
+    vertical-align: middle;
     /* width: 100%; */
 }
 
@@ -87,10 +85,11 @@ main {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+
 }
 
 .main-nav__item {
-    display: inline-block;
     margin: 0 1rem;
 }
 
@@ -131,10 +130,7 @@ main {
     }
 
     .main-nav {
-        display: inline-block;
-        text-align: right;
-        width: calc(100% - 44px);
-        vertical-align: middle;
+        display: flex;
     }
 }
 
@@ -146,14 +142,14 @@ main {
 
 .main-footer__links {
     list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-footer__link {
     display: block;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
 }
 
 .main-footer__link a {
@@ -181,9 +177,12 @@ main {
     width: 90%;
     height: 100%;
     list-style: none;
-    margin: 10% auto;
+    margin: 0 auto;
     padding: 0;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .mobile-nav__item {
@@ -227,8 +226,12 @@ main {
 }
 
 @media (min-width: 40rem) {
+    .main-footer__links {
+        flex-direction: row;
+        justify-content: center;
+    }
+
     .main-footer__link {
-        display: inline-block;
         margin: 0 1rem;
     }
 }
